# raw_import

./: .gitignore  LICENSE  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  settings.gradle
android/src/main/kotlin/com/township/raw_import/: RawImportPlugin.kt
cargokit/gradle/: plugin.gradle
ios/: raw_import.podspec
ios/Classes/: RawImportPlugin.swift
lib/: raw_import.dart
lib/src/: raw_import_plugin.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: decoder.dart
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: decoder.rs
test/: raw_import_models_test.dart
